# analytik

./: .gitignore  analytik.bat  installer.bat  pyproject.toml
src/analytik/: __init__.py  __main__.py
