[project]
name = "analytik"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nguyen Duc Toan", email = "ntoan96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "tiktokapi>=7.2.0",
]

[project.scripts]
analytik = "analytik:main"

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"
